# e5-ecommerce

./: .gitignore  README.md  pyproject.toml
data/: esci-data.ipynb  utils.py
dataset/: README.md  dev.ipynb
train/: train-dev.ipynb
