[tool.poetry]
name = "stuembed"
version = "0.1.0"
description = "Fine-Tune text Embedding model."
authors = ["milistu <studen.m98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.1"
datasets = "^2.16.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
