[tool.poetry]
name = "e5-ecommerce"
version = "0.1.0"
description = "Embedding model for E-commerce"
authors = ["milistu <studen.m98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.46.2"
datasets = "2.21.0"
torch = "^2.5.1"
sentence-transformers = "^2.7.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
